--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css">
     <title>3D_Portfolio</title>
   </head>
   <body>
@@ -124,7 +125,8 @@
    
 
 
-
-    <script type="module" src="/main.js"></script>
+    
+    <script type="module" src="main.js"></script>
+    
   </body>
 </html>
